crates/egui_mcp/src/snapshots/egui_mcp__real_app_tests__a_tight_limit_keeps_the_top_of_the_tree.snap
---
source: crates/egui_mcp/src/real_app_tests.rs
expression: "query_app(&QueryFilter { limit: 12, ..Default::default() })"
---
[
  {
    "id": "311f83ea3bd3e4",
    "role": "Window",
    "focused": true,
    "children": [
      {
        "id": "fec0f6fb9dd14fa2",
        "role": "GenericContainer",
        "children": [
          {
            "id": "e5b151f8b168e554",
            "role": "Pane",
            "children": [
              {
                "id": "e80cac3b9c9e8f17",
                "role": "GenericContainer",
                "omitted_children": 3
              }
            ]
          },
          {
            "id": "6b77a1e3523353fb",
            "role": "Pane",
            "children": [
              {
                "id": "efbee9bfd038e25c",
                "role": "GenericContainer",
                "omitted_children": 4
              }
            ]
          },
          {
            "id": "4f073a2eb1e95383",
            "role": "Splitter",
            "label": "Resize panel"
          },
          {
            "id": "bfe2b56da286622",
            "role": "Pane",
            "children": [
              {
                "id": "356cd4acb8ac5cc",
                "role": "GenericContainer",
                "omitted_children": 3
              }
            ]
          },
          {
            "id": "902324f74873b87a",
            "role": "Splitter",
            "label": "Resize panel"
          },
          {
            "id": "920179beebb0a10c",
            "role": "Pane",
            "children": [
              {
                "id": "d2e22a518e06cd68",
                "role": "GenericContainer",
                "omitted_children": 8
              }
            ]
          }
        ]
      }
    ]
  }
]
