crates/egui_mcp/src/snapshots/egui_mcp__real_app_tests__one_widget_by_its_text.snap
---
source: crates/egui_mcp/src/real_app_tests.rs
expression: "query_app(&QueryFilter\n{\n    query: Query\n    { content_contains: Some(\"volume\".to_owned()), ..Default::default() },\n    ..Default::default()\n})"
---
[
  {
    "id": "3ea4db01dcd9548a",
    "role": "Label",
    "value": "where is the volume slider?"
  },
  {
    "id": "96a8f155b766eefb",
    "role": "Slider",
    "label": "Volume"
  },
  {
    "id": "db68ddc08d32ccd1",
    "role": "SpinButton",
    "label": "Volume",
    "value": "42"
  },
  {
    "id": "2389025b21f1c31",
    "role": "Label",
    "value": "Volume"
  }
]
